--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "grapcis",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sonyk9919.github.io/3D-Tetris",
   "dependencies": {
     "@react-three/fiber": "^9.4.0",
     "@testing-library/dom": "^10.4.1",
@@ -25,7 +26,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "@types/three": "^0.181.0"
+    "@types/three": "^0.181.0",
+    "gh-pages": "^6.3.0"
   }
 }
